# gdf2bokeh

./: .gitignore  Dockerfile  LICENSE  README.md  bokeh_serve_example.py  environment.yml  example.ipynb  index.html  pyproject.toml  setup.py
.github/workflows/: conda_publish.yml  main.yml  publish.yml  pypi_publish.yml
bfm/: __init__.py  main.py
bfm/helpers/: geometry.py
bokeh_for_map/: __init__.py  main.py
bokeh_for_map/helpers/: settings.py
conda_recipe/: bld.bat  meta.yaml
docs/: geom_process.graphml
easy_map_bokeh/: __init__.py  main.py
easy_map_bokeh/helpers/: geometry.py  misc.py  settings.py
examples/: bokeh_serve_example.py  bokeh_simple_case_example.py  common.py
gdf2bokeh/: __init__.py  app_map.py  core.py  geometry.py  global_values.py  layer.py  main.py  models.py
gdf2bokeh/helpers/: geometry.py  settings.py
gdf_2_bokeh/: __init__.py
geo_bokeh/: __init__.py  main.py
geo_bokeh/helpers/: settings.py
tests/: test_geojson_geometry.py  test_geometry.py  test_integration.py  test_main.py  test_misc.py  test_shapely_geometry.py
tests/fixtures/: data.py  linestrings.geojson  mixed_features.geojson  multilinestrings.geojson  multipoints.geojson  multipolygons.geojson  points.geojson  polygons.geojson
