[tool.poetry]
name = "gdf2bokeh"
version = "2.3.2"
description = "An easy way to map geodataframes on bokeh"
authors = ["amauryval <amauryval@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
geopandas = "^0.12.2"
bokeh = "^3.0.3"


[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
