[tool.poetry]
name = "gdf2bokeh"
version = "3.0.4"
description = "An easy way to map geodataframes on bokeh"
authors = ["amauryval <amauryval@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.0"
geopandas = "^0.12.2"
bokeh = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["/examples/*"]
