[tool.poetry]
name = "gdf2bokeh"
version = "3.3.0"
description = "An easy way to map geodataframes on bokeh"
authors = ["amauryval <amauryval@gmail.com>"]
license = "GPL3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
geopandas = "^1.0.1"
bokeh = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["/examples/*"]
